--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,14 +3,34 @@
     <style name="Theme.MantuApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/dark_blue_200</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/dark_blue_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="TextContent">
+        <item name="android:fontFamily">@font/lato</item>
+    </style>
+    <style name="TextContent.Bold">
+        <item name="android:fontFamily">@font/lato_bold</item>
+    </style>
+    <style name="TextContent.Logo" parent="TextContent.Bold">
+        <item name="android:textColor">@color/dark_blue_200</item>
+        <item name="android:textSize">48sp</item>
+    </style>
+    <style name="TextContent.Title" parent="TextContent.Bold">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+    <style name="TextContent.SubTitle" parent="TextContent">
+        <item name="android:color">@color/black</item>
+        <item name="android:textSize">24sp</item>
     </style>
 </resources>
