--- a/app/src/main/res/anim/fab_rotate_clock.xml
+++ b/app/src/main/res/anim/fab_rotate_clock.xml
@@ -2,8 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true">
 
-
-    <rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    <rotate
         android:fromDegrees="0"
         android:toDegrees="45"
         android:interpolator="@android:anim/linear_interpolator"
