--- a/app/src/main/res/layout/fragment_add_new_task.xml
+++ b/app/src/main/res/layout/fragment_add_new_task.xml
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/masukkan_nama_task"
+        android:maxLines="1"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintTop_toBottomOf="@id/tx_task_title"/>
 
@@ -45,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
+        android:maxLines="1"
         android:hint="@string/masukkan_tanggal_task"
         app:layout_constraintEnd_toStartOf="@+id/img_calendar_icon"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +79,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="16dp"
-        android:hint="@string/masukkan_tanggal_task"
+        android:maxLines="1"
+        android:hint="@string/masukkan_jam_task"
         app:layout_constraintEnd_toStartOf="@+id/img_calendar_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tx_task_time" />
@@ -110,11 +113,35 @@
         android:layout_margin="24dp"
         app:layout_constraintTop_toBottomOf="@+id/tx_task_category" />
 
-    <!--<Button
-        android:id="@+id/btn_add_category"
+    <TextView
+        android:id="@+id/tx_task_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/deskripsi_task"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spinner_category"/>
+
+    <EditText
+        android:id="@+id/edt_task_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tambah_kategori"
-        android:layout_marginHorizontal="24dp"/>-->
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        android:minLines="3"
+        android:hint="@string/masukkan_deskripsi_task"
+        app:layout_constraintEnd_toStartOf="@+id/img_calendar_icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tx_task_desc" />
+
+    <Button
+        android:id="@+id/btn_add_task"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/add_new_task"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/edt_task_desc"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
