--- a/app/src/main/res/layout/sorted_task_item_row.xml
+++ b/app/src/main/res/layout/sorted_task_item_row.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,6 +10,8 @@
         android:src="@drawable/circle_shape"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -27,14 +28,14 @@
 
     <TextView
         android:id="@+id/tx_task_title"
-        tools:text="Task Title"
+        style="@style/TextContent.TaskTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        style="@style/TextContent.TaskTitle"
+        android:layout_marginStart="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/dot_indicator"
         app:layout_constraintStart_toEndOf="@id/dot_indicator"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/dot_indicator"
+        tools:text="Task Title" />
 
     <TextView
         android:id="@+id/tx_task_desc"
