add PrePopulateData to insert category and priority, add priority on add task fragment

--- a/app/src/main/res/layout/fragment_detail_task.xml
+++ b/app/src/main/res/layout/fragment_detail_task.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -11,5 +12,52 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
 
+    <TextView
+        android:id="@+id/tv_task_title"
+        tools:text="Task Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        style="@style/TextContent.Title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
+    <TextView
+        android:id="@+id/tv_task_desc"
+        tools:text="Task description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_task_title"/>
+
+    <TextView
+        android:id="@+id/tv_task_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Task date"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/dark_blue_200"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_task_desc"
+        app:drawableStartCompat="@drawable/ic_task"
+        app:drawableTint="@color/dark_blue_200" />
+
+    <TextView
+        android:id="@+id/tv_task_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Task Time"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/dark_blue_200"
+        app:layout_constraintStart_toEndOf="@id/tv_task_date"
+        app:layout_constraintTop_toBottomOf="@+id/tv_task_desc"
+        app:drawableStartCompat="@drawable/ic_time"
+        app:drawableTint="@color/dark_blue_200" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
