--- a/app/src/main/res/layout/fragment_add_new_task.xml
+++ b/app/src/main/res/layout/fragment_add_new_task.xml
@@ -114,6 +114,23 @@
         app:layout_constraintTop_toBottomOf="@+id/tx_task_category" />
 
     <TextView
+        android:id="@+id/tx_task_priority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/prioritas_task"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spinner_category"/>
+
+    <Spinner
+        android:id="@+id/spinner_priority"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/tx_task_priority" />
+
+    <TextView
         android:id="@+id/tx_task_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -121,7 +138,7 @@
         android:layout_marginHorizontal="24dp"
         android:text="@string/deskripsi_task"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinner_category"/>
+        app:layout_constraintTop_toBottomOf="@id/spinner_priority"/>
 
     <EditText
         android:id="@+id/edt_task_desc"
