--- a/app/src/main/res/layout/note_item_grid.xml
+++ b/app/src/main/res/layout/note_item_grid.xml
@@ -10,6 +10,7 @@
     android:layout_marginVertical="16dp"
     android:layout_marginHorizontal="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="0dp"
     app:contentPadding="16dp">
 
     <LinearLayout
