--- a/app/src/main/res/menu/menu_detail_note.xml
+++ b/app/src/main/res/menu/menu_detail_note.xml
@@ -12,6 +12,6 @@
         android:id="@+id/delete"
         android:title="@string/delete"
         android:icon="@drawable/ic_delete"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
 </menu>
